--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,13 +1,12 @@
-<html>
-    <head>
-        <title>Django Girls blog</title>
-    </head>
+{% extends 'blog/base.html' %}
+
+{% block content %}
     <body>
-        <div>
+        <div class="page-header">
             <h1><a href="/">Django Girls Blog</a></h1>
         </div>
 
-        <div>
+        <div class="post">
             {% for post in posts %}
             <b>Title: {{ post.title }}</b><br>
                 {{ post.published_date }}
@@ -15,4 +14,4 @@
            {% endfor %}
         </div>
     </body>
-</html>
+{% endblock %}
