Created a second URL and a second template to showcase posts

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -2,16 +2,14 @@
 
 {% block content %}
     <body>
-        <div class="page-header">
-            <h1><a href="/">Django Girls Blog</a></h1>
-        </div>
 
         <div class="post">
             {% for post in posts %}
-            <b>Title: {{ post.title }}</b><br>
-                {{ post.published_date }}
-                <p>{{ post.text }}</p>
+            <p>published: {{ post.published_date }}</p>
+            <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
+            <p>{{ post.text|linebreaksbr }}</p>
            {% endfor %}
+           potato
         </div>
     </body>
 {% endblock %}
